# begin-of-machine-learning

./: .gitignore  README.md  environment.yml  push.sh  pyproject.toml  requirements.txt
.sh/: clone.sh  conda.sh  init.sh  push.sh
config/: settings.py
src/: main.py
src/config/: config.py
src/data/: data_loader.py
src/data/test/: osm_api.overpass
src/examples/: dangdang.py
src/examples/data/: dangdang.json  db_dangdang.py
src/my_project_a/: __init__.py  main.py
src/spiders/: main_spider.py
src/utils/: file_helpers.py
tests/: test_spider.py
