[tool.poetry]
name = "my_project_a"
version = "0.1.0"
description = "This is an example for python machine learning."
authors = ["henrifox.W <1842208351@qq.com>"]
packages = [
    { include = "my_project_a", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"
pandas = "^1.3.0"
scikit-learn = "^1.0.0"
tensorflow = "^2.5.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"